--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div id="app">
   <nav class="navbar navbar-expand navbar-dark bg-dark">
-    <a href="#" class="navbar-brand">NMS</a>
+    <a href="#" class="navbar-brand">MAD</a>
     <ul class="navbar-nav mr-auto" routerLinkActive="active">
       <li class="nav-item" *ngIf="!isLoggedIn">
         <a href="/home" class="nav-link" routerLink="home" >Home </a>
