--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -2,26 +2,17 @@
    <p style="text-align: center; font-size:40px; color: red; margin:5%">Make A Difference </p>
    <ngb-carousel class="carousel slide carousel-fade" [animation]="'fade'">
       <ng-template ngbSlide>
-         <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(68).jpg" alt="First slide">
-        <div class="carousel-caption">
-          <h3>First slide label</h3>
-          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-        </div>
+         <img class="d-block w-100" src="../../../assets/Images/1.jpg" alt="First slide">
       </ng-template>
       <ng-template ngbSlide>
-         <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(6).jpg" alt="Second slide">
-         <div class="carousel-caption">
-           <h3>First slide label</h3>
-           <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-         </div>
+         <img class="d-block w-100" src="../../../assets/Images/2.jpg" alt="Second slide">
        </ng-template>
        <ng-template ngbSlide>
-         <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(9).jpg" alt="Third slide">
-         <div class="carousel-caption">
-           <h3>First slide label</h3>
-           <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-         </div>
+         <img class="d-block w-100" src="../../../assets/Images/3.jpg" alt="Third slide">
        </ng-template>
+       <ng-template ngbSlide>
+        <img class="d-block w-100" src="../../../assets/Images/4.jpg" alt="Third slide">
+      </ng-template>
     </ngb-carousel>
     <div style="margin:10% ;margin-left:5%;" class="container">
        <h1> Who are we?</h1>
