--- a/src/app/Components/register/register.component.html
+++ b/src/app/Components/register/register.component.html
@@ -1,4 +1,7 @@
-<div class="col-md-12">
+<div class="row-lg-4"><h1 style="text-align: center;"> Register</h1></div>
+<div class="row">
+<div class="col-md-4"></div>
+<div class="col-md-4">
     
       <form
         *ngIf="!isSuccessful"
@@ -94,3 +97,4 @@
         Your registration is successful!
       </div>
     </div>
+  </div>
