--- a/src/app/Components/admin-register/admin-register.component.html
+++ b/src/app/Components/admin-register/admin-register.component.html
@@ -1,4 +1,7 @@
-<div class="col-md-12">
+<div class="row-lg-4"><h1 style="text-align: center;">Admin Register</h1></div>
+<div class="row">
+<div class="col-md-4"></div>
+<div class="col-md-4">
     
     <form
       *ngIf="!isSuccessful"
@@ -96,4 +99,5 @@
     <div class="alert alert-success" *ngIf="isSuccessful">
       Your registration is successful!
     </div>
+  </div>
   </div>
