--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -1,4 +1,7 @@
-<div class="col-md-12">
+<div class="row-lg-4"><h1 style="text-align: center;"> Login</h1></div>
+<div class="row">
+  <div class="col-md-4"></div>
+<div class="col-md-4">
   <div class="card card-container">
     
     <form
@@ -8,8 +11,9 @@
       #f="ngForm"
       novalidate
     >
-      <div class="form-group">
-        <label for="username">Username</label>
+      <div class="form-group row">
+        <label for="username" class="col-sm-3 col-form-label">Username</label>
+        <div class="col-sm-9">
         <input
           type="text"
           class="form-control"
@@ -26,8 +30,10 @@
           Username is required!
         </div>
       </div>
-      <div class="form-group">
-        <label for="password">Password</label>
+      </div>
+      <div class="form-group row">
+        <label for="password"  class="col-sm-3 col-form-label">Password</label>
+        <div class="col-sm-9">
         <input
           type="password"
           class="form-control"
@@ -47,11 +53,14 @@
             Password must be at least 6 characters
           </div>
         </div>
+        </div>
       </div>
-      <div class="form-group">
+      <div class="form-group row">
+        <div class="col-sm-4">
         <button class="btn btn-primary btn-block">
           Login
         </button>
+      </div>
       </div>
       <div class="form-group">
         <div
@@ -68,4 +77,5 @@
       Logged in as {{ roles }}.
     </div>
   </div>
+</div>
 </div>
