--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,7 @@
 <div id="app">
   <nav class="navbar navbar-expand navbar-dark bg-dark">
-    <a href="#" class="navbar-brand">MAD</a>
+    <a href="/home" class="navbar-brand">MAD</a>
     <ul class="navbar-nav mr-auto" routerLinkActive="active">
-      <li class="nav-item" *ngIf="!isLoggedIn">
-        <a href="/home" class="nav-link" routerLink="home" >Home </a>
-      </li>
       <li class="nav-item" *ngIf="showAdminBoard">
         <a href="/admin-board" class="nav-link" routerLink="admin-board">Admin Board</a>
       </li>
